// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Button> Children render should render the specified children 1`] = `
<DocumentFragment>
  <button
    class="button primary medium light"
  >
    <span
      class="content"
    >
      <label>
        Ok
      </label>
    </span>
  </button>
</DocumentFragment>
`;

exports[`<Button> Children render should render the specified text 1`] = `
<DocumentFragment>
  <button
    class="button primary medium light"
  >
    <span
      class="content"
    >
      Hello There
    </span>
  </button>
</DocumentFragment>
`;

exports[`<Button> Global render should render default 1`] = `
<DocumentFragment>
  <button
    class="button primary medium light"
  />
</DocumentFragment>
`;

exports[`<Button> Style properties should render danger nature 1`] = `
<DocumentFragment>
  <button
    class="button danger medium light"
  />
</DocumentFragment>
`;

exports[`<Button> Style properties should render danger nature and small size 1`] = `
<DocumentFragment>
  <button
    class="button danger small light"
  />
</DocumentFragment>
`;

exports[`<Button> Style properties should render large size 1`] = `
<DocumentFragment>
  <button
    class="button primary large light"
  />
</DocumentFragment>
`;

exports[`<Button> Style properties should render medium size 1`] = `
<DocumentFragment>
  <button
    class="button primary medium light"
  />
</DocumentFragment>
`;

exports[`<Button> Style properties should render primary nature 1`] = `
<DocumentFragment>
  <button
    class="button primary medium light"
  />
</DocumentFragment>
`;

exports[`<Button> Style properties should render secondary nature 1`] = `
<DocumentFragment>
  <button
    class="button secondary medium light"
  />
</DocumentFragment>
`;

exports[`<Button> Style properties should render small size 1`] = `
<DocumentFragment>
  <button
    class="button primary medium light"
  />
</DocumentFragment>
`;
